# p2p_chat

./: .gitignore  README.md  bootstrap.sh  cert.pem  cleanup.sh  debug_discovery.py  debug_keys.py  key.pem  pyproject.toml  requirements.txt  setup.py  test_discovery.py
keys/: alice.json  bob.json  candy.json  dave.json  eve.json  frank.json  grace.json
src/encrypt/: __init__.py  client.py  crypto.py  discovery.py  file_transfer.py  keygen.py  protocol.py  server.py  stats.py  udp_transport.py
tests/: smoke_udp.py  test_broadcast.py
